# wg_netmanager

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  network.yaml  peer.yaml  shell.nix
.github/workflows/: test.yml
ns/: alice.conf  bob.conf  namespace.sh  test.yaml  testbed.sh  three_boxes.sh
src/: arch.rs  arch_def.rs  configuration.rs  crypt_udp.rs  error.rs  event.rs  interfaces.rs  lib.rs  main.rs  main_loop.rs  manager.rs  node.rs  routedb.rs  run_loop.rs  tui_display.rs  unconnected.rs  wg_dev.rs  wg_dev_linuxkernel.rs
src/arch_android/: mod.rs
src/arch_linux/: mod.rs  wg_dev_linuxkernel.rs
src/arch_macos/: mod.rs  wg_dev_linuxkernel.rs  wg_dev_macos.rs
src/arch_windows/: mod.rs
test/: Dockerfile  Makefile  run.sh
tests/: 01_bring_up_device.rs  01_wg_dev.rs  02_manager.rs
