[package]
name = "wg_netmanager"
# Need to be in sync with main.rs
version = "0.3.5"
edition = "2021"
authors = ["Jochen Kiemes <jochen@kiemes.de>"]
license = "MIT"
description = "Wireguard network manager"
documentation = "https://docs.rs/wg_netmanager/latest/wg_netmanager"
repository = "https://github.com/gin66/wg_netmanager"
readme = "README.md"
keywords = ["wireguard", "network", "automatic", "configuration", "route"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34"
yaml-rust = "0.4"
tempfile = "3.2"
ctrlc = "3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ipnet = "2.3"
chacha20poly1305 = "0.9"
base64 = "0.13"
rand = "0.8"
crc = "2.1"
log = "0.4"
fern =  { version = "0.6", features = ["colored"]}
chrono = "0.4"
tui = { version = "0.16", default-features = false, features = ["crossterm"] }
crossterm = "0.22.1"
tui-logger = "0.7"
rust-ini = "0.17"

[target.'cfg(target_os = "linux")'.dependencies]
ifcfg = "0.1"
simple-signal = "1.1"
